[package]
name = "opengl_rust_glium"
version = "0.1.0"
authors = ["wjviant <wjviant@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
winit = "*"
nalgebra = "*"
#winit = "0.29.15"
#glium = "0.34.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "opengl_rust_glium"
path = "src/lib.rs"

[[bench]]
name = "flocking_bench"
harness = false
